--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -19,6 +19,8 @@
 	"dependencies": {
 		"async": "0.1.22",
 		"crypto-browserify": "git://github.com/dominictarr/crypto-browserify.git#95c5d505",
+		"escodegen": "0.0.15",
+		"esprima": "1.0.2",
 		"github-flavored-markdown": "git://github.com/hegemonic/github-flavored-markdown.git",
 		"js2xmlparser": "0.1.0",
 		"jshint": "0.9.1",
