--- a/templates/nor/static/styles/jsdoc-default.css
+++ b/templates/nor/static/styles/jsdoc-default.css
@@ -6,7 +6,7 @@ html
 
 body
 {
-	font: 14px "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans serif;
+	font: 1em Tahoma, Verdana, Arial, sans-serif;
 	line-height: 130%;
 	color: #000;
 	background-color: #fff;
@@ -22,6 +22,11 @@ a:visited {
 
 a:active {
     color: #444;
+}
+
+.page-header {
+	color: #ffffff;
+	background-color: #000000;
 }
 
 .page-title {
