--- a/templates/nor/tmpl/layout.tmpl
+++ b/templates/nor/tmpl/layout.tmpl
@@ -16,9 +16,10 @@
 <body>
 
 <div id="main">
-    
-    <h1 class="page-title"><?js= title ?></h1>
-    <hr />
+	<div class="page-header">
+	    <h1 class="page-title"><?js= title ?></h1>
+	    <hr />
+	</div>
     <?js= content ?>
 </div>
 
