--- a/templates/nor/static/styles/jsdoc-default.css
+++ b/templates/nor/static/styles/jsdoc-default.css
@@ -10,6 +10,9 @@ body
 	line-height: 130%;
 	color: #000;
 	background-color: #fff;
+	margin: 0;
+	padding: 0;
+	background-color: #c0c0c0;
 }
 
 a {
@@ -27,6 +30,8 @@ a:active {
 .page-header {
 	color: #ffffff;
 	background-color: #000000;
+	margin: 0;
+	padding: 0;
 }
 
 .page-title {
