--- a/templates/nor/static/styles/jsdoc-default.css
+++ b/templates/nor/static/styles/jsdoc-default.css
@@ -68,7 +68,7 @@ section
 	background-color: #fff;
 	padding: 12px 24px;
     border-bottom: 1px solid #ccc;
-    margin-right: 240px;
+    margin-right: 20%;
 }
 
 .variation {
@@ -87,9 +87,9 @@ nav
 {
 	display: block;
 	float: left;
-    margin-left: -230px;
-    margin-top: 28px;
-    width: 220px;
+    margin-left: -20%;
+    margin-top: 50px;
+    width: 20%;
     border-left: 1px solid #ccc;
     padding-left: 9px;
 }
