--- a/templates/nor/static/styles/jsdoc-default.css
+++ b/templates/nor/static/styles/jsdoc-default.css
@@ -68,6 +68,7 @@ section
 	background-color: #fff;
 	padding: 12px 24px;
     border-bottom: 1px solid #ccc;
+    margin-left: 20%;
     margin-right: 20%;
 }
 
@@ -89,7 +90,7 @@ nav
 	float: left;
     margin-left: -20%;
     margin-top: 50px;
-    width: 20%;
+    width: 19%;
     border-left: 1px solid #ccc;
     padding-left: 9px;
 }
