--- a/templates/nor/static/styles/jsdoc-default.css
+++ b/templates/nor/static/styles/jsdoc-default.css
@@ -89,11 +89,11 @@ nav
 {
 	display: block;
 	float: left;
-    margin-left: -20%;
+    margin-left: -19%;
     margin-top: 4em;
     width: 19%;
-    border: 1px solid #ccc;
-    padding-left: 9px;
+	margin: 0;
+    padding: 0;
 	background-color: #e0e0e0;
 }
 
