--- a/templates/nor/static/styles/jsdoc-default.css
+++ b/templates/nor/static/styles/jsdoc-default.css
@@ -7,7 +7,7 @@ html
 body
 {
 	font: 1em Tahoma, Verdana, Arial, sans-serif;
-	line-height: 130%;
+	line-height: 1.3em;
 	color: #000;
 	background-color: #fff;
 	margin: 0;
@@ -38,7 +38,7 @@ a:active {
 .page-title {
 	color: #ffffff;
 	background-color: #000000;
-	margin: auto 20% auto 20%;
+	margin: auto 24em auto 24em;
 }
 
 header
@@ -52,15 +52,15 @@ header
 .class-description {
     font-style: italic;
 	font-family: Palatino, 'Palatino Linotype', serif;
-	font-size: 130%;
-	line-height: 140%;
+	font-size: 1.3em;
+	line-height: 1.4em;
 	margin-bottom: 1em;
 	margin-top: 1em;
 }
 
 #main {
     float: left;
-    width: 100%;
+    width: 1em;
 }
 
 section
@@ -70,8 +70,8 @@ section
 	background-color: #fff;
 	padding: 12px 24px;
     border-bottom: 1px solid #ccc;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 24em;
+    margin-right: 24em;
 }
 
 .variation {
@@ -80,7 +80,7 @@ section
 
 .optional:after {
 	content: "opt";
-	font-size: 60%;
+	font-size: 0.6em;
 	color: #aaa;
 	font-style: italic;
 	font-weight: lighter;
@@ -90,17 +90,17 @@ nav
 {
 	display: block;
 	float: left;
-    margin-left: -19%;
+    width: 23.5em;
+	margin-right: 0.5em;
+    margin-left: 23em;
     margin-top: 4em;
-    width: 19%;
-	margin: 0;
     padding: 0;
 	background-color: #e0e0e0;
 }
 
 nav ul {
     font-family: 'Lucida Grande', 'Lucida Sans Unicode', arial, sans-serif;
-    font-size: 100%;
+    font-size: 1em;
     line-height: 17px;
     padding:0;
     margin:0;
@@ -137,7 +137,7 @@ footer {
     padding: 6px;
     margin-top: 12px;
     font-style: italic;
-    font-size: 90%;
+    font-size: 0.9em;
 	color: #ffffff;
 	background-color: #000000;
 	text-align: center;
@@ -154,7 +154,7 @@ h1
 
 h2
 {
-	font-size: 170%;
+	font-size: 1.7em;
 	font-weight: bold;
 	letter-spacing: -0.01em;
 	margin: 6px 0 3px 0;
@@ -162,7 +162,7 @@ h2
 
 h3
 {
-	font-size: 150%;
+	font-size: 1.5em;
 	font-weight: bold;
 	letter-spacing: -0.01em;
 	margin-top: 16px;
@@ -171,7 +171,7 @@ h3
 
 h4
 {
-	font-size: 130%;
+	font-size: 1.3em;
 	font-weight: bold;
 	letter-spacing: -0.01em;
 	margin-top: 16px;
@@ -181,7 +181,7 @@ h4
 
 h5, .container-overview .subsection-title
 {
-	font-size: 120%;
+	font-size: 1.2em;
 	font-weight: bold;
 	letter-spacing: -0.01em;
 	margin: 8px 0 3px -16px;
@@ -189,7 +189,7 @@ h5, .container-overview .subsection-title
 
 h6
 {
-	font-size: 100%;
+	font-size: 1em;
 	letter-spacing: -0.01em;
 	margin: 6px 0 3px 0;
 	font-style: italic;
@@ -239,14 +239,14 @@ h6
 {
 	font-style: italic;
 	font-family: Palatino, 'Palatino Linotype', serif;
-	font-size: 107%;
+	font-size: 1.07em;;
 	margin: 0;
 }
 
 .prettyprint
 {
 	border: 1px solid #ddd;
-	width: 80%;
+	width: 0.8em;
     overflow: auto;
 }
 
@@ -257,8 +257,8 @@ h6
 .prettyprint code
 {
 	font-family: Consolas, 'Lucida Console', Monaco, monospace;
-	font-size: 100%;
-	line-height: 18px;
+	font-size: 1em;
+	line-height: 1.2em;
 	display: block;
 	padding: 4px 12px;
 	margin: 0;
@@ -277,7 +277,7 @@ h6
 .params .name, .props .name, .name code {
 	color: #A35A00;
 	font-family: Consolas, 'Lucida Console', Monaco, monospace;
-	font-size: 100%;
+	font-size: 1em;
 }
 
 .params td, .params th, .props td, .props th
