--- a/templates/nor/static/styles/jsdoc-default.css
+++ b/templates/nor/static/styles/jsdoc-default.css
@@ -38,7 +38,8 @@ a:active {
 .page-title {
 	color: #ffffff;
 	background-color: #000000;
-	margin: auto 24em auto 24em;
+	margin: 0.9em;
+	text-align: center;
 }
 
 header
