--- a/templates/nor/static/styles/jsdoc-default.css
+++ b/templates/nor/static/styles/jsdoc-default.css
@@ -68,9 +68,9 @@ section
 {
 	display: block;
 	background-color: #fff;
-	padding: 12px 24px;
     border-bottom: 1px solid #ccc;
-	min-width: 80%;
+	width: 80%;
+	padding: 2em;
     margin-left: auto;
     margin-right: auto;
 }
@@ -94,7 +94,7 @@ nav
 	right: 0.5em;
 	display: block;
 	float: left;
-    width: 23.5em;
+    width: 19%;
 	margin: 0;
     padding: 0.5em;
 	background-color: #f0f0f0;
