--- a/templates/nor/static/styles/jsdoc-default.css
+++ b/templates/nor/static/styles/jsdoc-default.css
@@ -92,9 +92,8 @@ nav
 {
 	position: fixed;
 	top: 4em;
-	right: 0.5em;
+	left: 0.5em;
 	display: block;
-	float: left;
     width: 19%;
 	margin: 0;
     padding: 0.5em;
