--- a/templates/nor/static/styles/jsdoc-default.css
+++ b/templates/nor/static/styles/jsdoc-default.css
@@ -7,7 +7,7 @@ html
 body
 {
 	font: 1em Tahoma, Verdana, Arial, sans-serif;
-	line-height: 1.3em;
+/*	line-height: 1.3em; */
 	color: #000;
 	background-color: #fff;
 	margin: 0;
@@ -46,7 +46,7 @@ a:active {
 header
 {
 	display: block;
-	padding: 6px 4px;
+	padding: 1em;
 	color: #ffffff;
 	background-color: #000000;
 }
@@ -55,7 +55,7 @@ header
     font-style: italic;
 	font-family: Palatino, 'Palatino Linotype', serif;
 	font-size: 1.3em;
-	line-height: 1.4em;
+/*	line-height: 1.4em;*/
 	margin-bottom: 1em;
 	margin-top: 1em;
 }
@@ -94,8 +94,7 @@ nav
 	top: 4em;
 	left: 0.5em;
 	display: block;
-    width: 19%;
-	margin: 0;
+	margin: 2em;
     padding: 0.5em;
 	background-color: #f0f0f0;
 }
@@ -103,7 +102,7 @@ nav
 nav ul {
     font-family: 'Lucida Grande', 'Lucida Sans Unicode', arial, sans-serif;
     font-size: 1em;
-    line-height: 17px;
+/*    line-height: 17px;*/
     padding:0;
     margin:0;
     list-style-type:none;
@@ -115,11 +114,11 @@ nav h2 a, nav h2 a:visited {
 }
 
 nav h3 {
-    margin-top: 12px;
+    margin-top: 2em;
 }
 
 nav li {
-    margin-top: 6px;
+    margin-top: 0.5em;
 }
 
 nav a {
@@ -162,17 +161,15 @@ h2
 {
 	font-size: 1.7em;
 	font-weight: bold;
-	letter-spacing: -0.01em;
-	margin: 6px 0 3px 0;
+	margin: 0.5em;
 }
 
 h3
 {
 	font-size: 1.5em;
 	font-weight: bold;
-	letter-spacing: -0.01em;
-	margin-top: 16px;
-	margin: 6px 0 3px 0;
+	margin-top: 1.5em;
+	padding: 0.5em;
 }
 
 h4
@@ -180,8 +177,8 @@ h4
 	font-size: 1.3em;
 	font-weight: bold;
 	letter-spacing: -0.01em;
-	margin-top: 16px;
-	margin: 18px 0 3px 0;
+	margin-top: 1.3em;
+	padding: 0.5em;
 	color: #A35A00;
 }
 
@@ -189,15 +186,13 @@ h5, .container-overview .subsection-title
 {
 	font-size: 1.2em;
 	font-weight: bold;
-	letter-spacing: -0.01em;
-	margin: 8px 0 3px -16px;
+	margin: 0.5em;
 }
 
 h6
 {
 	font-size: 1em;
-	letter-spacing: -0.01em;
-	margin: 6px 0 3px 0;
+	margin: 0.5em;
 	font-style: italic;
 }
 
@@ -226,7 +221,7 @@ h6
 	font-family: Consolas, "Lucida Console", Monaco, monospace;
 }
 
-.details { margin-top: 14px; border-left: 2px solid #DDD; }
+.details { margin-top: 1em; border-left: 2px solid #DDD; }
 .details dt { width:100px; float:left; padding-left: 10px;  padding-top: 6px; }
 .details dd { margin-left: 50px; }
 .details ul { margin: 0; }
@@ -264,7 +259,7 @@ h6
 {
 	font-family: Consolas, 'Lucida Console', Monaco, monospace;
 	font-size: 1em;
-	line-height: 1.2em;
+/*	line-height: 1.2em;*/
 	display: block;
 	padding: 4px 12px;
 	margin: 0;
