--- a/templates/nor/static/styles/jsdoc-default.css
+++ b/templates/nor/static/styles/jsdoc-default.css
@@ -1,5 +1,8 @@
 html
 {
+	margin: 0;
+	padding: 0;
+	height: 100%;
     overflow: auto;
     background-color: #fff;
 }
@@ -10,6 +13,7 @@ body
 /*	line-height: 1.3em; */
 	color: #000;
 	background-color: #fff;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	background-color: #f0f0f0;
@@ -30,7 +34,12 @@ a:active {
 .page-header {
 	color: #ffffff;
 	background-color: #000000;
+	width: 100%;
 	height: 4em;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
 	margin: 0;
 	padding: 0;
 }
@@ -60,7 +69,7 @@ header
 }
 
 #main {
-	margin: 0 0 0 20%;
+    margin: 4em 0 1em 20em;
 	padding: 0;
 }
 
@@ -69,8 +78,9 @@ section
 	display: block;
 	background-color: #fff;
     border-bottom: 1px solid #ccc;
-    margin: 0;
+	margin: 0;
 	padding: 2em;
+	height: 100%;
 }
 
 .variation {
@@ -88,10 +98,10 @@ section
 nav
 {
 	position: fixed;
-	top: 4em;
+	top: 0;
 	left: 0;
 	display: block;
-	margin: 2em;
+	margin: 5em 1em 2em 1em;
     padding: 0.5em;
 	background-color: #f0f0f0;
 	width: 18%;
@@ -132,6 +142,12 @@ nav a:active {
 }
 
 footer {
+	position: absolute;
+	left:0;
+	right:0;
+	bottom:0;
+	width: 100%;
+	height: 1em;
     display: block;
     font-style: italic;
     font-size: 0.9em;
