--- a/templates/nor/static/styles/jsdoc-default.css
+++ b/templates/nor/static/styles/jsdoc-default.css
@@ -36,7 +36,7 @@ a:active {
 	background-color: #000000;
 	width: 100%;
 	height: 4em;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
@@ -69,8 +69,9 @@ header
 }
 
 #main {
-    margin: 4em 0 1em 20em;
+    margin: 4em 0 1em 30em;
 	padding: 0;
+	height: 100%;
 }
 
 section
@@ -142,7 +143,7 @@ nav a:active {
 }
 
 footer {
-	position: absolute;
+	position: fixed;
 	left:0;
 	right:0;
 	bottom:0;
