--- a/templates/nor/static/styles/jsdoc-default.css
+++ b/templates/nor/static/styles/jsdoc-default.css
@@ -45,7 +45,7 @@ a:active {
 .page-title {
 	color: #ffffff;
 	background-color: #000000;
-	margin: 0;
+	margin: 0.3em 0 0 0;
 	text-align: center;
 }
 
