Added project name to title

--- a/templates/nor/tmpl/layout.tmpl
+++ b/templates/nor/tmpl/layout.tmpl
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title><?js= title ?> - JSDoc</title>
+    <title><?js= title ?> - <?js= JSON.parse(process.env.NPM_PACKAGE_JSON).name ?> - JSDoc</title>
     
     <script src="scripts/prettify/prettify.js"> </script>
     <script src="scripts/prettify/lang-css.js"> </script>
